<resources>
    <string name="app_name">PizzaOrdy</string>
    <string name="no_internet_message">No internet connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_size">Select Size</string>
    <string name="select_crust">Select Crust</string>
    <string name="rupee_symbol">₹</string>
    <string name="fetching_pizza_info">Fetching pizza info</string>
    <string name="veg">Veg</string>
    <string name="decrement_icon">--</string>
    <string name="increment_icon">+</string>
    <string name="pull_down_to_get_started">Pull down to get started</string>
    <string name="get_your_favourite_pizza">Delicious pizza at your doorstep</string>
    <string name="get_started">Order Now</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="close">Close</string>
    <string name="quantity">Quantity:</string>
    <string name="the_cart_is_empty">The cart is empty</string>
</resources>