<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/pizza_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Non-veg Pizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/side_base_margin"
        android:layout_marginTop="@dimen/side_base_margin"
        android:textColor="@color/black"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/pizza_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_name_tv"
        android:layout_marginStart="@dimen/side_base_margin"
        android:layout_marginTop="@dimen/side_base_margin"
        android:layout_marginEnd="@dimen/side_base_margin"
        android:textSize="16sp"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_base_margin"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_description_tv">

        <TextView
            android:id="@+id/veg_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/veg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="|" />

        <TextView
            android:id="@+id/non_veg_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Non-Veg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_base_margin"
            android:textSize="32sp"
            tools:text="@string/rupee_symbol" />

        <TextView
            android:id="@+id/total_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginStart="@dimen/side_base_margin"
            android:layout_marginBottom="@dimen/side_base_margin"
            android:textSize="16sp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="@dimen/side_base_margin"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/always_black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_from_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/always_black"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>